Fix edit_product image not edited. Problem was lie in 'edit_product.html'. You forgot to add some tag in the form's header. Still cannot check file type because "data['image'] is none". I was bypassing check data['image'] at the end.

--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -8,7 +8,7 @@
     {% if form_error_msg %}
         {{ form_error_msg }}
     {% endif %}
-    <form action="/product/{{ cid }}/edit" method="POST">
+    <form enctype="multipart/form-data" action="/product/{{ cid }}/edit" method="POST">
         {% csrf_token %}
         <p>edit product: {{ cid }}</p>
         <p>name: {{ form.name }}</p>
