--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -11,7 +11,13 @@
     </style>
 </head>
 <body>
-{{ state }}
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <form action="/login" method="post">
     {% csrf_token %}
     {% if next %}
