--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -9,5 +9,6 @@
     <img src="/media/{{ product.image }}"/>
     <p>description: {{ product.description }}</p>
     <p>price: {{ product.price }} $  point: {{ product.point }} pt.</p>
+    <p><a href="/product/{{ product.id }}/add_to_cart">Add to cart!</a></p>
 </body>
 </html>
