--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -10,5 +10,13 @@
     <p>description: {{ product.description }}</p>
     <p>price: {{ product.price }} $  point: {{ product.point }} pt.</p>
     <p><a href="/product/{{ product.id }}/add_to_cart">Add to cart!</a></p>
+
+    <form action="/product/{{ product.id }}/add_to_cart" method="post">
+        {% csrf_token %}
+        Amount:
+        <input type=int name="amount" value=1 size=3/>
+        <input type="submit" value="ADD TO CART!" />
+    </form>
+
 </body>
 </html>
