--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -5,6 +5,13 @@
     <title>Product: {{ product.name }}</title>
 </head>
 <body>
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
     <p>{{ product.name }}</p>
     <img src="/media/{{ product.image }}"/>
     <p>description: {{ product.description }}</p>
