--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -5,6 +5,10 @@
     <title>User Register</title>
 </head>
 <body>
-
+<form action="." method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Register"/>
+</form>
 </body>
 </html>
