--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -5,7 +5,7 @@
     <title>User Register</title>
 </head>
 <body>
-<form action="." method="post">
+<form action="/register" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Register"/>
