--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -5,6 +5,13 @@
     <title>User Register</title>
 </head>
 <body>
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <form action="/register" method="post">
     {% csrf_token %}
     {{ form.as_p }}
