complete add supplier

--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -16,7 +16,7 @@
         <p>name: {{ form.name }}</p>
         <p>description:</p>
         <p>{{ form.description }}</p>
-        <input type="submit" value="submit" />
+        <input type="submit" value="Submit" />
     </form>
 </body>
 </html>
