--- a/templates/view_cart.html
+++ b/templates/view_cart.html
@@ -5,6 +5,13 @@
     <title>TEMP CART VIEW</title>
 </head>
 <body>
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <table border="1">
     <tr><td>Product</td><td>Price</td><td>Point</td><td>Quantity</td><td>Total</td></tr>
     {% for product in product_in_cart %}
@@ -16,6 +23,6 @@
     {% endfor %}
 </table>
 Total: ${{ total_price }}/{{ total_point }}pts
-<p>Add some more! <a href="/cart/checkout">Checkout</a></p>
+<p>Add some more! <a href="/checkout">Checkout</a></p>
 </body>
 </html>
