--- a/templates/view_order_detail.html
+++ b/templates/view_order_detail.html
@@ -7,10 +7,10 @@
 <body>
     Order ID: {{ order.id }}
     Date of Purchase: {{ order.timestamp }}
-    Shipping Address: {{ order.ship_address }}
+    Shipping Address: {{ order.addr_firstline }} {{ order.addr_secondline }} {{ order.addr_town }} {{ order.addr_country }} {{ order.zipcode }}
     Products Purchased:
     <table border="1">
-        <tr><td>Product</td><td>Price</td><td>Point</td><td>Quantity</td><td>Total</td></tr>
+        <tr><td>Product</td><td>Price</td><td>Point</td><td>Quantity</td><td>Total</td><td>status</td></tr>
         {% for product_io in products_list %}
             <tr>
                 <td>{{ product_io.0.product.name }}</td>
@@ -18,6 +18,7 @@
                 <td>{{ product_io.0.product.point }}</td>
                 <td>{{ product_io.0.amount }}</td>
                 <td>${{ product_io.1 }}/{{ product_io.2 }}pts</td>
+                <td>{{ product_io.0.status }}</td>
             </tr>
         {% endfor %}
     </table>
