--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -5,10 +5,10 @@
     <title>add new product</title>
 </head>
 <body>
-    {% if success %}
-        {{ success }}
-    {% elif form_error %}
-        {{ form_error }}
+    {% if success_msg %}
+        {{ success_msg }}
+    {% elif form_error_msg %}
+        {{ form_error_msg }}
     {% endif %}
     <form action="/product/new" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
@@ -19,7 +19,7 @@
         <p>category: {{ form.category }}</p>
         <p>description:</p>
         <p>{{ form.description }}</p>
-        {% if file_type_error %}{{ file_type_error }}{% endif %}
+        <p>supplier: {{ form.supplier }}</p>
         <p>image: {{ form.image }}</p>
         <input type="submit" value="submit" />
     </form>
