--- a/templates/checkout_shipping.html
+++ b/templates/checkout_shipping.html
@@ -17,10 +17,10 @@
 <form action='/checkout/shipping' method="post">
     {% csrf_token %}
     <input type="radio" name="select_address"
-           {% if not oldaddress %}disabled="true"{% endif %}
+           {% if not oldaddress.country %}disabled="true"{% endif %}
            value="old"/>
     Ship to:
-    {% if oldaddress %}
+    {% if oldaddress.country %}
         <span id="oldaddress">{{ oldaddress.firstline }} {{ oldaddress.secondline}}
         {{ oldaddress.town }} {{ oldaddress.country }} {{ oldaddress.zipcode }}</span>
     {% else %}
