--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <input type="submit" value='go' />
 </form>
 {% block userblock %}
-    {% if not user %}
+    {% if not user.is_authenticated %}
     <a href='/login'>Login</a> | <a href='/register'>Register</a>
     {% else %}
     Hello, {{ user.username }}
