--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>{% block title %}Base Template{% endblock %}</title>
     <link rel='stylesheet' href="/media/css/main.css" type="text/css">
 </head>
 <body>
