--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 {% block sidemenu %}
     <div class='sidemenu'>
         <div class='menu1'><a href="/">Home</a></div>
-    {% if user %}
+    {% if user.is_authenticated %}
         <div class='menu1'><a href="/cart">Cart</a></div>
         <div class='menu1'><a href='/history'>Order</a></div>
     {% endif %}
