--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <title>Log in</title>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+{% extends 'base.html' %}
+{% block title %}Log in{% endblock %}
+
+{% block userblock %}{% endblock %}
+{% block sidemenu %}{% endblock %}
+{% block content %}
     <style>
         body{
             font-family:Arial,Helvetica,sans-serif;
             font-size: 12px;
         }
     </style>
-</head>
-<body>
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
 <form action="/login" method="post">
     {% csrf_token %}
     {% if next %}
@@ -30,5 +22,4 @@
 
     <input type="submit" value="Log In" />
 </form>
-</body>
-</html>
+{% endblock %}
