--- a/templates/search.html
+++ b/templates/search.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Search results for {{ q }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Search results for {{ q }}{% endblock %}
+{% block content %}
 <h2>Search results for {{ q }}</h2>
 {% if product_list %}
 {% for product in product_list %}
@@ -13,5 +10,4 @@
 {% else %}
 <p>Your search {{ q }} did not match any products</p>
 {% endif %}
-</body>
-</html>
+{% endblock %}
