--- a/templates/view_cart.html
+++ b/templates/view_cart.html
@@ -1,17 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title>TEMP CART VIEW</title>
-</head>
-<body>
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
+{% extends 'base.html' %}
+
+{% block title %}View cart{% endblock %}
+
+{% block content %}
 <table border="1">
     <tr><td>Product</td><td>Price</td><td>Point</td><td>Quantity</td><td>Total</td></tr>
     {% for product in product_in_cart %}
@@ -24,5 +15,4 @@
 </table>
 Total: ${{ total_price }}/{{ total_point }}pts
 <p>Add some more! <a href="/checkout">Checkout</a></p>
-</body>
-</html>
+{% endblock %}
