--- a/templates/view_category.html
+++ b/templates/view_category.html
@@ -1,10 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html xmlns="http://www.w3.org/1999/html">
-<head>
-    <title>Category {{ category_detail.name }} View</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %} Category {{ category_detail.name }} View {% endblock %}
+
+{% block content %}
 <p>{{ category_detail.name }} : {{ category_detail.description }}</p>
 {% if products_list %}
     <ul>
@@ -14,7 +12,6 @@
         {% endfor %}
     </ul>
 {% else %}
-    <p>No product are available. (Error Code : Trollololol)</p>
+    <p>No product are available.</p>
 {% endif %}
-</body>
-</html>
+{% endblock %}
