--- a/templates/catalog_view.html
+++ b/templates/catalog_view.html
@@ -1,3 +1,8 @@
 {% extends "base.html" %}
 
 {% block title %}Welcome to E-Comerce Site{% endblock %}
+
+{% block content %}
+<!-- TODO: which product does show in index page ? -->
+เอาสินค้ามาโชว์ยังไงดีว้า
+{% endblock %}
