--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Edit Profile{% endblock %}
 {% block content %}
-<script language="JavaScript" src="/media/gen_validatorv4.js"
+<script language="JavaScript" src="/media/javascript/gen_validatorv4.js"
         type="text/javascript"></script>
 <form id='edit_form' name='edit_form' enctype="multipart/form-data" action="edit" method="post">
     {% csrf_token %}
