--- a/templates/packing.html
+++ b/templates/packing.html
@@ -1,3 +1,38 @@
+{% extends "backoffice_base.html" %}
+
+{% block title %}Packing Management{% endblock %}
+
+
+<style>
+    body{
+        font-family:Arial,Helvetica,sans-serif;
+        font-size: 12px;
+    }
+</style>
+
+
+{% block content %}
+<h1>Back Office : Packing List</h1>
+
+<div id='empDetails'>
+    Welcome!<br>
+    Mr.{{ fullname }}<br>
+    {% if manager and clerk %}
+    {{ manager }}, {{ clerk }}<br>
+    {% else %}
+    {% if manager %} {{ manager }}<br>{% endif %}
+    {% if clerk %}{{ clerk }}<br>{% endif %}
+    {% endif %}
+
+</div>
+
+
+<div><span>Order ID</span><span>Ordered Date</span><span>Status</span><span></span></div>
+{% for order in list %}
+<div><span>{{ order.id }}</span><span>{{ order.timestamp }}</span><span>{{ order.status }}</span><span><button type="button" formaction="/packing/{{ order.id }}">Proceed</button></span></div>
+{% endfor %}
+{% endblock %}
+<!--
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
@@ -42,3 +77,4 @@
 
 </body>
 </html>
+-->
