--- a/templates/managestock.html
+++ b/templates/managestock.html
@@ -1,3 +1,60 @@
+{% extends "backoffice_base.html" %}
+
+{% block title %}Stock Management{% endblock %}
+
+<head>
+    <title>Stock Management</title>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <style>
+        body{
+            font-family:Arial,Helvetica,sans-serif;
+            font-size: 12px;
+        }
+    </style>
+</head>
+<body>
+
+{% block content %}
+<h1>Back Office : Stock Management</h1>
+
+<div id='empDetails'>
+    Welcome!<br>
+    Mr.{{ fullname }}<br>
+    {% if manager and clerk %}
+    {{ manager }}, {{ clerk }}<br>
+    {% else %}
+    {% if manager %} {{ manager }}<br>{% endif %}
+    {% if clerk %}{{ clerk }}<br>{% endif %}
+    {% endif %}
+
+</div>
+
+<div>
+    {% for product in product_list %}
+    <div>
+        <form action='/backoffice/managestock/{{ product.0 }}' method='post'>
+            {% csrf_token %}
+            {{ product.1 }}/{{ product.2 }}
+            amount <input type="text" name="amount" value="{{ product.3 }}"/>
+            {% if product.4 != None %}
+            {% if product.5 %}
+            <input type="checkbox" value="ordered" name="ordered" checked="checked"/> Has been ordered
+            {% else %}
+            <input type="checkbox" value="ordered" name="ordered" /> Has been ordered
+            {% endif %}
+
+            {% else %}
+            -
+            {% endif %}
+            <input type="submit" value="submit"/>
+        </form>
+    </div>
+    {% endfor %}
+</div>
+
+</body>
+{% endblock %}
+<!--
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
