--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -17,6 +17,10 @@
         <p>{{ form.description }}</p>
         <p>supplier: {{ form.supplier }}</p>
         <p>image: {{ form.image }}</p>
+
+        <!-- #TODO: Quick debug -->
+        <p>amount: {{ form.amount }}</p>
+        <p>sup status: {{ form.orderSupStatus }}</p>
         <input type="submit" value="submit" />
     </form>
 {% endblock %}d
