--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
 <body>
 <div id="container">
     <div id="header">
-        <span id="logo">E-Commerce</span>
+        <span id="logo">
+            <a href="/">E-Commerce</a>
+        </span>
         <form id="search_form" action='/search' method="get">
             <input id="id_q" type="text" name="q" maxlength="50">
             {#{{ search_form.category }}#}
@@ -16,11 +18,11 @@
         <span id='user_block'>
             {% block userblock %}
                 {% if not user.is_authenticated %}
-                <a href='/login'>Login</a> | <a href='/register'>Register</a>
+                    <a href='/login'>Login</a> | <a href='/register'>Register</a>
                 {% else %}
-                Hello, {{ user.username }}
-                {{ user.get_profile.point }} pts.
-                <a href="/cart">View cart</a> | <a href='/logout'>Logout</a>
+                    Welcome, {{ user.username }}<br>
+                    {{ user.get_profile.point }} pts.
+                    <a href="/cart"><img src="/media/img/cart.jpg" height="15px" /></a> | <a href='/logout'>Logout</a>
                 {% endif %}
             {% endblock %}
         </span>
