--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -17,6 +17,8 @@
         <p>supplier: {{ form.supplier }}</p>
         <img src="/media/{{ product.image }}" />
         <p>{{ form.image }}</p>
+        <p>amount: {{ form.amount }}</p>
+        <p>order supply status: {{ form.orderSupStatus }}</p>
         <input type="submit" value="submit" />
     </form>
 </body>
