--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -9,35 +9,37 @@
 }
 
 #sidemenu {
-    position:absolute;
     margin-top:45px;
     margin-left:10px;
-    height:100px;
-    width:155px;
-//background-color:lightgray;
+    /*height:100px;*/
+    float:left;
+    width:17%;
+    min-height: 100px;
+    /*background-color:lightgray;*/
 }
 
 #content {
-    position:relative;
-    margin-left:200px;
-    margin-top:45px;
-    height:500px;
-    width:600px;
+    float:left;
+    width: 80%;
+    min-height:500px;
     padding-left:10px;
     padding-top:10px;
-// background-color:lightgray;
+    display: block;
 }
 
 #header{
     margin-top:10px;
     left:15px;
+    min-height: 75px;
     top:10px;
     position:relative;
     background-color:#00004d;
+    display: block;
 }
 
 #logo {
     margin-left:10px;
+    float:left;
     position:relative;
     font-size:40px;
     color:white;
@@ -78,4 +80,58 @@
 .menu2 {
     position:relative;
     left:20px;
+}
+a.menubox:link,a.menubox:visited
+{
+    margin: 2px;
+    display:block;
+    font-weight:bold;
+    color:#000068;
+    background-color: #ffffff;
+    text-align:center;
+    padding:4px;
+    text-decoration:none;
+    border-style:groove;
+    border-color: #000068;
+}
+a.menubox:hover,a.menubox:active
+{
+    color: #FFFFFF;
+    background-color: #000068;
+}
+
+#packing
+{
+    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+    width:100%;
+    border-collapse:collapse;
+}
+#packing td, #packing th
+{
+    font-size:1em;
+    border:1px solid #699dbf;
+    padding:3px 7px 2px 7px;
+}
+#packing th
+{
+    font-size:1.1em;
+    text-align:left;
+    padding-top:5px;
+    padding-bottom:4px;
+    background-color: #4ca3c9;
+    color:#ffffff;
+}
+#packing tr.alt td
+{
+    color:#000000;
+    background-color:#EAF2D3;
+}
+
+.clearfix::after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: ".";
+    clear: both;
+    height: 0;
 }
