--- a/templates/packing.html
+++ b/templates/packing.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>Back Office : Packing List</h1>
+<h1>Packing List</h1>
 
 <table id="packing"><tr><th>Order ID</th><th>Ordered Date</th><th>Status</th><th>Action</th></tr>
 {% for order in list %}
