--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -3,7 +3,6 @@
     top:10px;
     width:1024px;
     margin:0 auto;
-//background-color:lightblue;
     background-attachment:scroll;
 
 }
@@ -11,11 +10,14 @@
 #sidemenu {
     margin-top:45px;
     margin-left:10px;
-    /*height:100px;*/
     float:left;
     width:17%;
+    height: 100%;
     min-height: 100px;
-    /*background-color:lightgray;*/
+}
+
+#middle {
+    display: block;
 }
 
 #content {
@@ -30,11 +32,26 @@
 #header{
     margin-top:10px;
     left:15px;
-    min-height: 75px;
+    min-height: 80px;
     top:10px;
     position:relative;
     background-color:#00004d;
     display: block;
+}
+#header-left {
+    float:left;
+    margin-left: 10px;
+    display: block;
+}
+#header-left-right {
+    float: right;
+    font-size:20px;
+    color:white;
+    display: block;
+    clear: left;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: right;
 }
 
 #logo {
@@ -43,7 +60,8 @@
     position:relative;
     font-size:40px;
     color:white;
-// img src="../images/lotus.jpg"
+    display: block;
+/* img src="../images/lotus.jpg"*/
 }
 #search_form {
     position:relative;
