--- a/templates/backoffice_base.html
+++ b/templates/backoffice_base.html
@@ -7,7 +7,10 @@
 <body>
 <div id="container">
     <div id="header">
-        <span id="logo">E-Commerce</span>
+    <div id="header-left">
+        <div id="logo" class="clearfix">E-Commerce Store</div>
+        <p id="header-left-right">Back Office</p>
+    </div>
         <span id='user_block'>
             {% block userblock %}
                 {% if not user.is_authenticated %}
@@ -19,7 +22,7 @@
             {% endblock %}
         </span>
     </div>
-
+    <div id="middle" class="clearfix">
     <div id='sidemenu'>
         {% block sidemenu %}
         {% if manager%}
@@ -36,7 +39,7 @@
 
         {% endblock %}
     </div>
-<div class="clearfix"></dic>
+</div>
 </div>
 </body>
 </html>
