add CSS of backoffice

--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -35,7 +35,7 @@
     min-height: 80px;
     top:10px;
     position:relative;
-    background-color: #00007f;
+    background-color: #000068;
     display: block;
 }
 #header-left {
