--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -35,7 +35,13 @@
     min-height: 80px;
     top:10px;
     position:relative;
-    background-color: #000068;
+    background-image: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(0.3, rgb(0,40,110)),
+        color-stop(0.97, rgb(0,35,51))
+    );
     display: block;
 }
 #header-left {
