--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,14 @@
     {% endblock %}
     </div>
     <div id="content">
+
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tag %}> class="{{ message.tag}}"{% endif %}> {{message}} </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     {% block content %}
 
     {% endblock %}
