--- a/templates/checkout_shipping.html
+++ b/templates/checkout_shipping.html
@@ -1,25 +1,27 @@
 {% extends 'base.html' %}
 {% block title %}Checkout: Select Payment{% endblock %}
 {% block content %}
-<h1>Select Shipping Address</h1>
-<h3>Total: $ {{ total_price }} / {{ total_point }} pts.</h3>
+<span class="biggest_header">Select Shipping Address</span>
+<span class="big_header">Total: $ {{ total_price }} / {{ total_point }} pts.</span>
 <form action='/checkout/shipping' method="post">
     {% csrf_token %}
-    <input type="radio" name="select_address"
+    <table><tr><td><input type="radio" name="select_address"
            {% if not oldaddress.country %}disabled="true"{% endif %}
            value="old"/>
     Ship to:
+    </td><td id='oldaddress'>
     {% if oldaddress.country %}
-        <span id="oldaddress">{{ oldaddress.firstline }} {{ oldaddress.secondline}}
-        {{ oldaddress.town }} {{ oldaddress.country }} {{ oldaddress.zipcode }}</span>
+        {{ oldaddress.firstline }} {{ oldaddress.secondline}}
+        {{ oldaddress.town }} {{ oldaddress.country }} {{ oldaddress.zipcode }}
     {% else %}
         no existing address
     {% endif %}
-    <br>
+
+    </td></tr></table>
     <input type="radio" name="select_address" value="new"/> Add new address:
-
+    <div id='adress_form'>
     {{ form.as_p }}
-
+    </div>
     <input type="submit" value='back' formaction="/checkout/payment" formmethod="get">
     <input type="submit" value='next'>
 
