Finish manage Catalog and Done all back office system Yeahhh!!

--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -21,5 +21,9 @@
         <p>order supply status: {{ form.orderSupStatus }}</p>
         <input type="submit" value="submit" />
     </form>
+
+    <div>
+        <a href="/product/{{ pid }}/delete">Delete this product</a>
+    </div>
 </body>
 </html>
